WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275659
[Navigation] Abort ongoing navigation on window.stop()
https://bugs.webkit.org/show_bug.cgi?id=275659
Summary
[Navigation] Abort ongoing navigation on window.stop()
Rob Buis
Reported
2024-06-19 01:33:49 PDT
Abort ongoing navigation on window.stop().
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-06-19 01:37:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29973
Radar WebKit Bug Importer
Comment 2
2024-06-26 01:34:15 PDT
<
rdar://problem/130572003
>
EWS
Comment 3
2024-07-01 04:05:54 PDT
Committed
280526@main
(92b5ddfd0573): <
https://commits.webkit.org/280526@main
> Reviewed commits have been landed. Closing PR #29973 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug