[Navigation] Abort ongoing navigation on window.stop() https://bugs.webkit.org/show_bug.cgi?id=275659

Reviewed by Darin Adler and Alex Christensen.

Implement the "inform the navigation API about aborting navigation" alogithm [1] and
call it as part of the "stop loading" algorithm [2].

[1] https://html.spec.whatwg.org/multipage/nav-history-apis.html#inform-the-navigation-api-about-aborting-navigation
[2] https://html.spec.whatwg.org/multipage/document-lifecycle.html#nav-stop

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/signal-abort-detach-in-onnavigate-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/signal-abort-window-stop-in-onnavigate-expected.txt:
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::stopAllLoaders):
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::innerDispatchNavigateEvent):
(WebCore::Navigation::abortOngoingNavigationIfNeeded):
* Source/WebCore/page/Navigation.h:

Canonical link: https://commits.webkit.org/280526@main