Source/WebCore/page/Navigation.h
@@ -146,6 +146,8 @@ public:
     void updateForReactivation(Vector<Ref<HistoryItem>>& newHistoryItems, HistoryItem& reactivatedItem);
     void updateForActivation(HistoryItem* previousItem, std::optional<NavigationNavigationType>);
 
+    void abortOngoingNavigationIfNeeded();
+
 private:
     explicit Navigation(LocalDOMWindow&);
 
